--- a/DoctorsWardrobe/DoctorsWardrobe.csproj
+++ b/DoctorsWardrobe/DoctorsWardrobe.csproj
@@ -44,6 +44,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -52,6 +60,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -124,6 +134,45 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Accessory.cs">
+      <DependentUpon>Wardrobe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Bottom.cs">
+      <DependentUpon>Wardrobe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Color.cs">
+      <DependentUpon>Wardrobe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\NeckWear.cs">
+      <DependentUpon>Wardrobe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Occasion.cs">
+      <DependentUpon>Wardrobe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\OuterWear.cs">
+      <DependentUpon>Wardrobe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Season.cs">
+      <DependentUpon>Wardrobe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Top.cs">
+      <DependentUpon>Wardrobe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Wardrobe.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Wardrobe.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Wardrobe.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Wardrobe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Wardrobe.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Wardrobe.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -133,8 +182,25 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Models\Wardrobe.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Wardrobe.edmx</DependentUpon>
+      <LastGenOutput>Wardrobe.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\Wardrobe.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Wardrobe.edmx</DependentUpon>
+      <LastGenOutput>Wardrobe.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="Models\Wardrobe.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Wardrobe.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\Wardrobe.edmx.diagram">
+      <DependentUpon>Wardrobe.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -164,7 +230,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -173,6 +238,9 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
