--- a/DoctorsWardrobe/Web.config
+++ b/DoctorsWardrobe/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -53,7 +53,10 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DoctorsWardrobeEntities" connectionString="metadata=res://*/Models.Wardrobe.csdl|res://*/Models.Wardrobe.ssdl|res://*/Models.Wardrobe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WECANCODEIT-60\SQLEXPRESS;initial catalog=DoctorsWardrobe;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DoctorsWardrobeEntities" connectionString="metadata=res://*/Models.Wardrobe.csdl|res://*/Models.Wardrobe.ssdl|res://*/Models.Wardrobe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WECANCODEIT-60\SQLEXPRESS;initial catalog=DoctorsWardrobe;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="DoctorsWardrobeContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=DoctorsWardrobeContext-20171102004038; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|DoctorsWardrobeContext-20171102004038.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
