--- a/DoctorsWardrobe/DoctorsWardrobe.csproj
+++ b/DoctorsWardrobe/DoctorsWardrobe.csproj
@@ -191,6 +191,14 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\10.jpg" />
+    <Content Include="Images\11 purple coat.jpg" />
+    <Content Include="Images\11.jpg" />
+    <Content Include="Images\11th_doctors_green_.jpg" />
+    <Content Include="Images\11th_doctor_jacket_.jpg" />
+    <Content Include="Images\12th-coat.jpg" />
+    <Content Include="Images\coat10.jpg" />
+    <Content Include="Images\coat9.jpg" />
     <Content Include="Models\Wardrobe.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Wardrobe.edmx</DependentUpon>
@@ -279,7 +287,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
